--- a/.github/workflows/one-build.yaml
+++ b/.github/workflows/one-build.yaml
@@ -38,7 +38,7 @@ jobs:
         env:
           CI: true
           SITE_URL: ${{ inputs.site-url }}
-        run: pwd
+        run: ls
 
       - name: Build Node assets
         env:
