--- a/assets/config.json
+++ b/assets/config.json
@@ -6,5 +6,8 @@
         {"id":"saka","mdp":"kely","role":"admin"},
         {"id":"melun","mdp":"melun","role":"user"},
         {"id":"fpma","mdp":"fpma","role":"user"}
-    ]
+    ],
+    "textBadge1" :     "Fanompom-pivavahana isak' Alahady ao amin'ny Eglise Adventiste 69 Avenue Maréchal Foch Dammarie les Lys, manomboka amin'ny 10h30. ",
+    "textBadge2"  : "Mampahatsiahy antsika mpianakavin'ny finoana. Fa efa nanomboka ny Asa sy Fampaherezana ato amin'ny fiangonana. Ka dia isaky ny Alahady faha efatran'ny volana izany. Koa isika izay maniry izany dia raisina antanan-droa."
+
 } 
