--- a/assets/config.json
+++ b/assets/config.json
@@ -1,6 +1,6 @@
 {
     "url":{
-    "apiUrl": "" 
+    "apiUrl": "https://fpma-melun.ovh/" 
     },
     "numContact" : "+33 (0) 6 73 93 32 49",
     "email" : "fpmamelun@gmail.com",
