--- a/assets/config.json
+++ b/assets/config.json
@@ -5,12 +5,12 @@
     "numContact" : "+33 (0) 6 73 93 32 49",
     "email" : "fpmamelun@gmail.com",
     "mpitantsoratra" : {
-        "nom" : "RABE Hanta",
-        "num" : "+33 (0) 7 82 11 68 48"
+        "nom" : "Rtoa RABARISOA Lalasoaniaina",
+        "num" : "+33 (0) 7 62 31 24 45"
     },
     "filoha" : {
-        "nom": "RAZAFIMANDIMBY Lalao",
-        "num": "+33 (0) 6 73 93 32 49"
+        "nom": "Atoa RABE Edson",
+        "num": "+33 (0) 6 85 37 69 36"
     },
 
     "infos": [
