--- a/assets/config.json
+++ b/assets/config.json
@@ -1,6 +1,6 @@
 {
     "url":{
-    "apiUrl": "http://113.30.189.220:3002" 
+    "apiUrl": "http://113.30.189.220:3002/" 
     },
     "numContact" : "+33 (0) 6 85 37 69 36",
     "email" : "fpmamelun@gmail.com",
